--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -6,6 +6,10 @@
     <nav class="header-nav ms-auto">
        <ul class="d-flex align-items-center">
           <li class="nav-item d-block d-lg-none"> <a class="nav-link nav-icon search-bar-toggle " href="#"> <i class="bi bi-search"></i> </a></li>
+            <li class="nav-link nav-balance d-flex align-items-center">
+               <h6>USDO :</h6>
+               <p> {{usdo}}</p>
+            </li>
           <li class="nav-item dropdown">
              <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown"> <i class="bi bi-bell"></i> <span class="badge bg-primary badge-number">4</span> </a>
              <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
@@ -113,7 +117,7 @@
              <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown"> <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle"> <span class="d-none d-md-block dropdown-toggle ps-2">Jassa</span> </a>
              <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                 <li class="dropdown-header">
-                   <h6>Jassa</h6>
+                   <h6></h6>
                    <span>Web Designer</span>
                 </li>
                 <li>
