--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -4,13 +4,13 @@
       
 
    
-       <li class="nav-item"> <a class="nav-link collapsed" routerLink="admin/faq"> <i class="bi bi-file-text"></i> <span>Transactions</span> </a></li>
-       <li class="nav-item"> <a class="nav-link collapsed" routerLink="admin/contact"> <i class="bi bi-person-bounding-box"></i> <span>Customers</span> </a></li>
-       <li class="nav-item"> <a class="nav-link collapsed" routerLink="admin/user-profile"> <i class="bi bi-person"></i> <span>Direct Pay</span> </a></li>
-       <li class="nav-item"> <a class="nav-link collapsed" routerLink="admin/error404"> <i class="bi bi-box-arrow-down"></i> <span>INflow ACH</span> </a></li>
-       <li class="nav-item"> <a class="nav-link collapsed" routerLink="admin/blank"> <i class="bi bi-send"></i> <span>Outflow ACH</span> </a></li>
-       <li class="nav-item"> <a class="nav-link collapsed" routerLink="admin/user-profile"> <i class="bi bi-patch-check"></i> <span>KYC</span> </a></li>
-       <li class="nav-item"> <a class="nav-link collapsed" routerLink="admin/user-profile"> <i class="bi bi-gear"></i> <span>Settings</span> </a></li>
+       <li class="nav-item"> <a class="nav-link collapsed" routerLink="/admin/transaction"> <i class="bi bi-file-text"></i> <span>Transactions</span> </a></li>
+       <li class="nav-item"> <a class="nav-link collapsed" routerLink="/admin/customers"> <i class="bi bi-person-bounding-box"></i> <span>Customers</span> </a></li>
+       <li class="nav-item"> <a class="nav-link collapsed" routerLink="/admin/user-profile"> <i class="bi bi-person"></i> <span>Direct Pay</span> </a></li>
+       <li class="nav-item"> <a class="nav-link collapsed" routerLink="/admin/error404"> <i class="bi bi-box-arrow-down"></i> <span>INflow ACH</span> </a></li>
+       <li class="nav-item"> <a class="nav-link collapsed" routerLink="/admin/blank"> <i class="bi bi-send"></i> <span>Outflow ACH</span> </a></li>
+       <li class="nav-item"> <a class="nav-link collapsed" routerLink="/admin/user-profile"> <i class="bi bi-patch-check"></i> <span>KYC</span> </a></li>
+       <li class="nav-item"> <a class="nav-link collapsed" routerLink="/admin/user-profile"> <i class="bi bi-gear"></i> <span>Settings</span> </a></li>
 
     </ul>
  </aside>
