--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -22,15 +22,15 @@
                 </ul>
               </div>
               <div class="card-body">
-                <h5 class="card-title">Sales <span>| Today</span></h5>
+                <h5 class="card-title">Deposit <span>| Today</span></h5>
                 <div class="d-flex align-items-center">
                   <div
                     class="card-icon rounded-circle d-flex align-items-center justify-content-center"
                   >
-                    <i class="bi bi-cart"></i>
+                    <i class="bi bi-currency-dollar"></i>
                   </div>
                   <div class="ps-3">
-                    <h6>145</h6>
+                    <h6>$1,450</h6>
                     <span class="text-success small pt-1 fw-bold">12%</span>
                     <span class="text-muted small pt-2 ps-1">increase</span>
                   </div>
@@ -54,7 +54,7 @@
                 </ul>
               </div>
               <div class="card-body">
-                <h5 class="card-title">Revenue <span>| This Month</span></h5>
+                <h5 class="card-title">Withdrawals <span>| This Month</span></h5>
                 <div class="d-flex align-items-center">
                   <div
                     class="card-icon rounded-circle d-flex align-items-center justify-content-center"
@@ -86,7 +86,7 @@
                 </ul>
               </div>
               <div class="card-body">
-                <h5 class="card-title">Customers <span>| This Year</span></h5>
+                <h5 class="card-title">KYC <span>| This Year</span></h5>
                 <div class="d-flex align-items-center">
                   <div
                     class="card-icon rounded-circle d-flex align-items-center justify-content-center"
