--- a/src/app/pages/auth/pages-register/pages-register.component.html
+++ b/src/app/pages/auth/pages-register/pages-register.component.html
@@ -39,7 +39,7 @@
                            </div>
                            <div class="col-12"><button type="button" class="btn btn-primary w-100" (click)="register();"><i class="fa fa-plus"></i> Register</button></div>
                            <div class="col-12">
-                              <p class="small mb-0">Already have an account? <a routerLink="/pages-login">Log in</a></p>
+                              <p class="small mb-0">Already have an account? <a routerLink="/">Log in</a></p>
                            </div>
                         </form>
                      </div>
