--- a/src/app/pages/admin/customers/customers.component.html
+++ b/src/app/pages/admin/customers/customers.component.html
@@ -68,7 +68,7 @@
                 >
                       <th scope="row">
                         <a href="#"
-                          ><img src="assets/img/profile-img.jpg" alt=""
+                          ><img src="assets/img/admin.png" alt=""
                         /></a>
                       </th>
                       <td>
