--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -225,22 +225,22 @@
                 </ul>
               </div>
               <div class="card-body pb-0">
-                <h5 class="card-title">Top Selling <span>| Today</span></h5>
+                <h5 class="card-title">Top Transactions <span>| Today</span></h5>
                 <table class="table table-borderless">
                   <thead>
                     <tr>
-                      <th scope="col">Preview</th>
-                      <th scope="col">Product</th>
-                      <th scope="col">Price</th>
-                      <th scope="col">Sold</th>
-                      <th scope="col">Revenue</th>
+                      <th scope="col">User Photo</th>
+                      <th scope="col">Full Name</th>
+                      <th scope="col">Deposit</th>
+                      <th scope="col">Withdrawal</th>
+                      <th scope="col">Average</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
                       <th scope="row">
                         <a href="#"
-                          ><img src="assets/img/product-1.jpg" alt=""
+                          ><img src="assets/img/admin.png" alt=""
                         /></a>
                       </th>
                       <td>
@@ -255,7 +255,7 @@
                     <tr>
                       <th scope="row">
                         <a href="#"
-                          ><img src="assets/img/product-2.jpg" alt=""
+                          ><img src="assets/img/admin.png"  alt=""
                         /></a>
                       </th>
                       <td>
@@ -270,11 +270,11 @@
                     <tr>
                       <th scope="row">
                         <a href="#"
-                          ><img src="assets/img/product-3.jpg" alt=""
+                          ><img src="assets/img/admin.png" alt=""
                         /></a>
                       </th>
                       <td>
-                        <a href="#" class="text-primary fw-bold"
+                        <a href="#" class="assets/img/admin.png" 
                           >Doloribus nisi exercitationem</a
                         >
                       </td>
@@ -285,7 +285,7 @@
                     <tr>
                       <th scope="row">
                         <a href="#"
-                          ><img src="assets/img/product-4.jpg" alt=""
+                          ><img src="assets/img/admin.png"  alt=""
                         /></a>
                       </th>
                       <td>
@@ -300,7 +300,7 @@
                     <tr>
                       <th scope="row">
                         <a href="#"
-                          ><img src="assets/img/product-5.jpg" alt=""
+                          ><img src="assets/img/admin.png"  alt=""
                         /></a>
                       </th>
                       <td>
