--- a/src/app/pages/admin/customers/customers.component.html
+++ b/src/app/pages/admin/customers/customers.component.html
@@ -49,27 +49,26 @@
                 <table class="table table-borderless">
                   <thead>
                     <tr>
-                      <th scope="col">Preview</th>
+                      <th >Preview</th>
                       <th >Full Name</th>
                      
                        <th >Email</th>
                        <th >Phone</th>
                        <th >Country</th>
-                       <th >Registration Date</th>
+                       <th >Status</th>
                        <th >Wallet Address</th>
                     </tr>
                   </thead>
                   <tbody>
                    
-                    <tr   *ngFor="
+                    <tr onclick="viewUser()" *ngFor="
                     let user of users;
                     let i = index
                   "
                 >
                       <th scope="row">
-                        <a href="#"
-                          ><img src="assets/img/admin.png" alt=""
-                        /></a>
+                        <img src="assets/img/admin.png" alt=""
+                        />
                       </th>
                       <td>
                         <a href="#" class="text-primary fw-bold"
@@ -77,10 +76,10 @@
                         >
                       </td>
                       <td>{{user.email}}</td>
-                      <td class="fw-bold">{{user.email}}</td>
-                      <td>{{user.email}}</td>
-                      <td>{{user.email}}</td>
-                      <td>{{user.email}}</td>
+                      <td class="fw-bold">{{user.phone}}</td>
+                      <td>{{user.country}}</td>
+                      <td>{{user.idVerified ? 'Verified' : 'Not Verified'}}</td>
+                      <td class="table-body">{{user.stellar_address}}</td>
                     </tr>
                   </tbody>
                 </table>
