--- a/src/app/pages/admin/transactions/transaction.component.html
+++ b/src/app/pages/admin/transactions/transaction.component.html
@@ -1,28 +1,44 @@
 <main id="main" class="main">
   <div class="pagetitle">
-    <h1>Transactions</h1>
+    <div class="row">
+      <div class="col">
+        <h1>Transactions</h1>
+      </div>
+      <div class="col search-trans">
+        <div class="input-group mb-0">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search transactions"
+            aria-label="Search transactions"
+          />
+          <button class="btn btn-outline-secondary" type="button">
+            Search
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
-  <section class="transaction">
-    <div class="transaction">
+
+  <section class="section dashboard">
+    <div class="col-lg-0">
       <div class="card">
         <div class="card-body">
-          <ul
-            class="nav nav-tabs nav-tabs-bordered d-flex"
-            id="borderedTabJustified"
-            role="tablist"
-          >
+          <h5 class="card-title"></h5>
+          <ul class="nav nav-tabs d-flex" id="myTabjustified" role="tablist">
             <li class="nav-item flex-fill" role="presentation">
               <button
                 class="nav-link w-100 active"
                 id="home-tab"
                 data-bs-toggle="tab"
-                data-bs-target="#bordered-justified-home"
+                data-bs-target="#home-justified"
                 type="button"
                 role="tab"
                 aria-controls="home"
                 aria-selected="true"
+                (click)="filterTransactions('All'); showTransactionType = false"
               >
-                Deposit
+                All
               </button>
             </li>
             <li class="nav-item flex-fill" role="presentation">
@@ -30,97 +46,152 @@
                 class="nav-link w-100"
                 id="profile-tab"
                 data-bs-toggle="tab"
-                data-bs-target="#bordered-justified-profile"
+                data-bs-target="#profile-justified"
                 type="button"
                 role="tab"
                 aria-controls="profile"
                 aria-selected="false"
+                (click)="
+                  filterTransactions('deposit'); showTransactionType = true
+                "
               >
-                Withdrawals
+                Deposit
+              </button>
+            </li>
+            <li class="nav-item flex-fill" role="presentation">
+              <button
+                class="nav-link w-100"
+                id="contact-tab"
+                data-bs-toggle="tab"
+                data-bs-target="#contact-justified"
+                type="button"
+                role="tab"
+                aria-controls="contact"
+                aria-selected="false"
+                (click)="
+                  filterTransactions('withdrawal'); showTransactionType = true
+                "
+              >
+                Withdrawal
               </button>
             </li>
           </ul>
-          <div class="tab-content pt-2" id="borderedTabJustifiedContent">
+          <div class="tab-content pt-2" id="myTabjustifiedContent">
             <div
               class="tab-pane fade show active"
-              id="bordered-justified-home"
+              id="home-justified"
               role="tabpanel"
               aria-labelledby="home-tab"
             >
-              <section class="section">
-                <div class="row">
-                  <div >
-                    <div class="card">
-                      <div class="card-body">
-                        <table class="table datatable">
-                          <thead>
-                            <tr >
-                              <th class="table-body">S/N</th>
-                              <th>Date</th>
-                              <th scope="col">First Name</th>
+              <div class="row">
+                <div class="col-lg-0">
+                  <div class="row">
+                    <div class="col-xxl-8 col-md-5"></div>
 
-                              <th scope="col">Email</th>
-                              <th scope="col">Phone</th>
-                              <th scope="col">Stellar Address</th>
-                              <th scope="col">Transaction Amount</th>
-                              <th scope="col">Fee</th>
-                              <th scope="col">Net Amount</th>
+                    <div class="col-12">
+                      <div class="card recent-sales overflow-auto">
+                        <div class="filter">
+                          <a class="icon" href="#" data-bs-toggle="dropdown"
+                            ><i class="bi bi-three-dots"></i
+                          ></a>
+                          <ul
+                            class="dropdown-menu dropdown-menu-end dropdown-menu-arrow"
+                          >
+                            <li class="dropdown-header text-start">
+                              <h6>Filter</h6>
+                            </li>
+                            <li><a class="dropdown-item" href="#">Today</a></li>
+                            <li>
+                              <a class="dropdown-item" href="#">This Month</a>
+                            </li>
+                            <li>
+                              <a class="dropdown-item" href="#">This Year</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <div class="card top-selling overflow-auto">
+                        <div class="card-body pb-0">
+                          <h5 class="card-title"><span></span></h5>
+                          <table class="table dataTable-table">
+                            <thead>
+                              <tr>
+                                <th>S/N</th>
+                                <th>Date</th>
+                                <th scope="col">First Name</th>
 
-                              <th>Transaction Type</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Phone</th>
+                                <th scope="col">Stellar Address</th>
+                                <th scope="col">Transaction Amount</th>
+                                <th scope="col">Fee</th>
+                                <th scope="col">Net Amount</th>
 
-                              <th>Action</th>
-                            </tr>
-                          </thead>
-                          <tbody class="stellar-address">
-                            <tr
-                              *ngFor="
-                                let transaction of transactions;
-                                let i = index
-                              "
-                            >
-                              <th scope="row">{{ i + 1 }}</th>
-                              <td class="table-body">
-                                {{
-                                  transaction.created_at.toMillis()
-                                    | date : "yyyy/MM/dd h:mm"
-                                }}
-                              </td>
-                              <td class="table-body">
-                                {{ transaction.firstName }}
-                                {{ transaction.lastName }}
-                              </td>
-                              <td class="table-body">{{ transaction.email }}</td>
-                              <td class="table-body">{{ transaction.phone }}</td>
-                              <td class="table-body">{{ transaction.stellar_address }}</td>
-                              <td class="table-body">{{ transaction.token_amount }}</td>
-                              <td class="table-body">{{ transaction.amount_fee }}</td>
-                              <td class="table-body">{{ transaction.amount_net }}</td>
-                              <td class="table-body">{{ transaction.transition_type }}</td>
-                            </tr>
-                          </tbody>
-                        </table>
+                                <th *ngIf="showTransactionType">
+                                  Transaction Type
+                                </th>
+                              </tr>
+                            </thead>
+                            <tbody class="stellar-address">
+                              <tr
+                                *ngFor="let transaction of filteredTransactions"
+                              >
+                                <i
+                                  class="bi {{
+                                    transaction.transition_type == 'withdrawal'
+                                      ? 'bi-arrow-up-left-circle-fill icon-outbound'
+                                      : 'bi-arrow-down-left-circle-fill icon-inbound'
+                                  }} "
+                                ></i>
+                                <td class="table-body">
+                                  {{
+                                    transaction.created_at.toMillis()
+                                      | date : "yyyy/MM/dd h:mm"
+                                  }}
+                                </td>
+                                <td class="table-body">
+                                  {{ transaction.firstName }}
+                                  {{ transaction.lastName }}
+                                </td>
+                                <td class="table-body">
+                                  {{ transaction.email }}
+                                </td>
+                                <td class="table-body">
+                                  {{ transaction.phone }}
+                                </td>
+                                <td class="table-body">
+                                  {{ transaction.stellar_address }}
+                                </td>
+                                <td class="table-body">
+                                  {{ transaction.token_amount }}
+                                </td>
+                                <td class="table-body">
+                                  {{ transaction.amount_fee }}
+                                </td>
+                                <td class="table-body">
+                                  {{ transaction.amount_net }}
+                                </td>
+                                <td
+                                  class="table-body"
+                                  *ngIf="showTransactionType"
+                                >
+                                  {{ transaction.transition_type }}
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </section>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <ul class="pagination">
-        <li class="page-item disabled">
-          <a class="page-link" href="#" tabindex="-1" aria-disabled="true"
-            >Previous</a
-          >
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item active" aria-current="page">
-          <a class="page-link" href="#">2</a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-      </ul>
     </div>
   </section>
 </main>
