--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,13 +1,13 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
-    <div class="d-flex align-items-center justify-content-between"> <a routerLink="/home" class="logo d-flex align-items-center"> <img src="assets/img/logo.png" alt=""> <span class="d-none d-lg-block">Orokii</span> </a> <i (click)="sidebarToggle()" class="bi bi-list toggle-sidebar-btn"></i></div>
+    <div class="d-flex align-items-center justify-content-between"> <a  class="logo d-flex align-items-center"> <img src="assets/img/logo.png" alt=""> <span class="d-none d-lg-block">Orokii</span> </a> <i (click)="sidebarToggle()" class="bi bi-list toggle-sidebar-btn"></i></div>
     <div class="search-bar">
-       <form class="search-form d-flex align-items-center" method="POST" action="#"> <input type="text" name="query" placeholder="Search" title="Enter search keyword"> <button type="submit" title="Search"><i class="bi bi-search"></i></button></form>
+       <form class="search-form d-flex align-items-center"> <input type="text" name="query" placeholder="Search" title="Enter search keyword"> <button type="submit" onclick="getBal()" title="Search"><i class="bi bi-search"></i></button></form>
     </div>
     <nav class="header-nav ms-auto">
        <ul class="d-flex align-items-center">
           <li class="nav-item d-block d-lg-none"> <a class="nav-link nav-icon search-bar-toggle " href="#"> <i class="bi bi-search"></i> </a></li>
             <li class="nav-link nav-balance d-flex align-items-center">
-               <h6>USDO :</h6>
+               <h6 onclick="getBal()">USDO :</h6>
                <p> {{usdo}}</p>
             </li>
           <li class="nav-item dropdown">
