added functionality to pull facephidata

--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
                     <i class="bi bi-currency-dollar"></i>
                   </div>
                   <div class="ps-3">
-                    <h6>$1,450</h6>
+                    <h6>{{total_deposit}}</h6>
                     <span class="text-success small pt-1 fw-bold">12%</span>
                     <span class="text-muted small pt-2 ps-1">increase</span>
                   </div>
@@ -62,7 +62,7 @@
                     <i class="bi bi-currency-dollar"></i>
                   </div>
                   <div class="ps-3">
-                    <h6>$3,264</h6>
+                    <h6>{{total_withdrawal}}</h6>
                     <span class="text-success small pt-1 fw-bold">8%</span>
                     <span class="text-muted small pt-2 ps-1">increase</span>
                   </div>
@@ -94,7 +94,7 @@
                     <i class="bi bi-people"></i>
                   </div>
                   <div class="ps-3">
-                    <h6>1244</h6>
+                    <h6>{{kyc_count}}</h6>
                     <span class="text-danger small pt-1 fw-bold">12%</span>
                     <span class="text-muted small pt-2 ps-1">decrease</span>
                   </div>
