--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -101,7 +101,7 @@
                    <a href="#">
                       <img src="assets/img/messages-3.jpg" alt="" class="rounded-circle">
                       <div>
-                         <h4>Admin</h4>
+                         <h4>{{admin}}</h4>
                          <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
                          <p>8 hrs. ago</p>
                       </div>
