--- a/src/app/pages/admin/transactions/transaction.component.html
+++ b/src/app/pages/admin/transactions/transaction.component.html
@@ -217,7 +217,7 @@
              <div class="col-lg-6">
                 <div class="card">
                    <div class="card-body">
-                      <h5 class="card-title">User Information</h5>
+                      <h5 class="card-title"><i class="bx bxs-user-detail"></i> User Information</h5>
                       <nav style="--bs-breadcrumb-divider: '>';">
                         <ol class="breadcrumb">
                            <li *ngIf="showTransactionType" class="breadcrumb-item">{{selectedTransaction.firstName}}</li>
@@ -252,7 +252,7 @@
                 </div>
                 <div class="card">
                    <div class="card-body">
-                      <h5 class="card-title">Timeline</h5>
+                      <h5 class="card-title"><i class="bx bxs-calendar"></i>Timeline</h5>
                       <nav class="d-flex justify-content-center">
                          <ol class="breadcrumb">
                             <li *ngIf="showTransactionType" class="breadcrumb-item">{{selectedTransaction.firstName}}</li>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="card">
                    <div class="card-body">
-                      <h5 class="card-title">Payment Information</h5>
+                      <h5 class="card-title"><i class="bx bxs-id-card"></i>Payment Information</h5>
                       <nav style="--bs-breadcrumb-divider: '>';">
                         <ol class="breadcrumb">
                            <li *ngIf="showTransactionType" class="breadcrumb-item">{{selectedTransaction.firstName}}</li>
@@ -303,7 +303,7 @@
              <div class="col-lg-6">
                 <div class="card">
                    <div class="card-body">
-                      <h5 class="card-title">Datas</h5>
+                      <h5 class="card-title"><i class="bx bxs-collection"></i>Datas</h5>
                       <div class="pagetitle">
                        
                          <nav style="--bs-breadcrumb-divider: '>';">
@@ -341,7 +341,7 @@
                 </div>
                 <div class="card">
                    <div class="card-body">
-                      <h5 class="card-title">Transaction Information</h5>
+                      <h5 class="card-title"><i class="bx bxs-receipt"></i>Transaction Information</h5>
                       <nav style="--bs-breadcrumb-divider: '>';">
                          <ol class="breadcrumb">
                             <li *ngIf="showTransactionType"class="breadcrumb-item">{{selectedTransaction.firstName}}</li>
@@ -378,7 +378,7 @@
              <div class="col-lg-6">
               <div class="card">
                 <div class="card-body">
-                   <h5 class="card-title">Blockchain Information</h5>
+                   <h5 class="card-title"><i class="bx bxs-component"></i>Blockchain Information</h5>
                    <nav style="--bs-breadcrumb-divider: '>';">
                      <ol class="breadcrumb">
                         <li *ngIf="showTransactionType" class="breadcrumb-item">{{selectedTransaction.firstName}}</li>
