added route to customer details

--- a/src/app/pages/admin/customers/customers.component.html
+++ b/src/app/pages/admin/customers/customers.component.html
@@ -58,7 +58,7 @@
                   <tbody>
                     <tr
                       onclick="viewUser()"
-                      *ngFor="let user of users; let i = index"
+                      *ngFor="let user of users; let i = index" (click)="showInfo(i)"
                     >
                       <th class="user-photo">
                         <img
