--- a/src/app/pages/admin/customers/customer-details/details-customer.component.html
+++ b/src/app/pages/admin/customers/customer-details/details-customer.component.html
@@ -83,7 +83,7 @@
                 <div>...</div>
                 <div class="row">
                   <div class="col-lg-3 col-md-4 label">Full Name</div>
-                  <div class="col-lg-9 col-md-8">Bisi Badeokun</div>
+                  <div class="col-lg-9 col-md-8">{{facePhiCollection.FirstName}} {{facePhiCollection.LastName}}</div>
                 </div>
                 <div class="row">
                   <div class="col-lg-3 col-md-4 label">Date Of Birth</div>
